# text-embedding-process

./: .env.example  .gitignore  classify.py  import_docs.py  main.py  pyproject.toml  query.py  text_summarizer.py  ttp_demo.py
